--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <activity
-            android:name=".FormPlaceActivity"
+            android:name=".views.FormPlaceActivity"
             android:exported="false" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -33,7 +33,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".views.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <!--
@@ -45,20 +45,20 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity
-            android:name=".ListViewActivity"
+            android:name=".views.ListViewActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".views.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".Registro"
+            android:name=".views.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".SliderFragment"
+            android:name=".views.SliderFragment"
             android:exported="false"
             tools:ignore="Instantiatable" />
         <activity
-            android:name=".MainActivity"
+            android:name=".views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
