--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -33,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
     implementation 'com.google.android.material:material:1.5.0-beta01'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -41,7 +42,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation 'pub.devrel:easypermissions:3.0.0'
-    implementation 'com.google.firebase:firebase-database:20.0.2'
+
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
