--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,11 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
-
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.ciclo4_moviles_g4_2.pappseando"
+        applicationId 'com.ciclo4_moviles_g4_2.pappseando_app'
         minSdk 24
         targetSdk 31
         versionCode 1
@@ -37,10 +34,10 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.google.android.material:material:1.5.0-beta01'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
+    //implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
