--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.ciclo4_moviles_g4_2.pappseando">
+    package="com.ciclo4_moviles_g4_2.pappseando_app">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -23,30 +23,30 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name=".views.FormPlaceActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.FormPlaceActivity"
             android:exported="false" />
         <activity
-            android:name=".views.MapsActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".views.ListViewActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.ListViewActivity"
             android:exported="false" />
         <activity
-            android:name=".views.LoginActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".views.RegisterActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".views.RecoveryActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.RecoveryActivity"
             android:exported="false" />
         <activity
-            android:name=".views.SliderFragment"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.SliderFragment"
             android:exported="false"
             tools:ignore="Instantiatable" />
         <activity
-            android:name=".views.MainActivity"
+            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
