--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ciclo4_moviles_g4_2.pappseando_app">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -23,33 +23,34 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.FormPlaceActivity"
+            android:name=".views.FormPlaceActivity"
             android:exported="false" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.MapsActivity"
+            android:name=".views.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.ListViewActivity"
+            android:name=".views.ListViewActivity"
             android:exported="false" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.LoginActivity"
+            android:name=".views.LoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.RegisterActivity"
+            android:name=".views.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.RecoveryActivity"
+            android:name=".views.RecoveryActivity"
             android:exported="false" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.SliderFragment"
+            android:name=".views.SliderFragment"
             android:exported="false"
             tools:ignore="Instantiatable" />
         <activity
-            android:name="com.ciclo4_moviles_g4_2.pappseando_app.views.MainActivity"
+            android:name=".views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
